# EUMaster4HPC-Challenge

./: .gitignore  CMakeLists.txt  README.md  Results.md
conjugate_gradients-main/: CMakeLists.txt  Makefile  README.md  Results.md  accRunCG.sh  generate_spd_system.sh  generate_spd_systems.sh  profilerCG.sh  random_spd_system.sh  runCG.sh  run_fpga.sh  sample.py  test_MPI.sh
conjugate_gradients-main/batches/: batch-1.sh  batch-12.sh  batch-128.sh  batch-16.sh  batch-24.sh  batch-256.sh  batch-32.sh  batch-4.sh  batch-64.sh  batch-8.sh  batch-OMP.sh  batch_MPI.sh  batch_cuda.sh  batch_fpga.sh  batch_openACC.sh  profilerCG.sh  runCG.sh
conjugate_gradients-main/include/: CGSolver.hpp  CGSolverACC.hpp  CGSolverCuda.hpp  CGSolverMPI.hpp  CGSolverOMP.hpp  conjugate_gradients.hpp
conjugate_gradients-main/src/: CGSolver.cpp  CGSolverACC.cpp  CGSolverCuda.cpp  CGSolverMPI.cpp  CGSolverOMP.cpp  conjugate_gradients.cpp
conjugate_gradients-main/test/: CMakeLists.txt  mainOmp.cpp
conjugate_gradients-main/test/testCuda/: CGSolverCUDA.cu  Makefile  README.md  mainCuda.cpp  run.sh
conjugate_gradients-main/test/testMPI/: CMakeLists.txt  README.md  main.cpp  mainMPI.cpp
conjugate_gradients-main/test/testOMP/: CMakeLists.txt  README.md  mainOmp.cpp  profilingCG.sh  runCG.sh
conjugate_gradients-main/test/testOpenACC/: CMakeLists.txt  README.md  accRunCG.sh  mainOpenACC.cpp  profilingCG.sh
conjugate_gradients-main/test/testSYCL/: README.md  instructions.md  mainSYCL.cpp
conjugate_gradients-main/test/testSerial/: CMakeLists.txt  README.md  main.cpp  runSerialCG.sh
heat_equation-main/io/: copyBmp.sh
